Bug 44082 - ODF: invalid hyphenation attributes written
Summary: ODF: invalid hyphenation attributes written
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: odf odf_validation
Keywords:
Depends on:
Blocks: 37390
  Show dependency treegraph
 
Reported: 2011-12-22 14:55 UTC by Michael Stahl
Modified: 2012-02-24 04:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Stahl 2011-12-22 14:55:59 UTC
investigating bugdoc from bug 37390 comment #12 revealed:

LO may write the following attributes with a value of 0,
even though they have the type positiveInteger:

20.191 fo:hyphenation-push-char-count
20.192 fo:hyphenation-remain-char-count