fdo#44082: fix hyphenation attributes:

These have type positiveInteger, so don't write 0 values:

20.191 fo:hyphenation-push-char-count
20.192 fo:hyphenation-remain-char-count